# liburfkill-qt

./: CMakeLists.txt  README  README.md  TODO
cmake/: cmake_uninstall.cmake.in
liburfkill-qt/: CMakeLists.txt  client.cpp  client.h  device.cpp  device.h  enum.h  killswitch.cpp  killswitch.h  urfkill-qt.pc.in  urfkill.h
test/: CMakeLists.txt  main.cpp  test.cpp  test.h
